# FullPos

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  VALIDATION.md  environment.yml  meson.build  meson_options.txt  pyproject.toml  实现计划.md
.github/workflows/: build_wheels.yml
docs/: api.rst  conf.py  filtering.rst  grib.rst  horizontal.rst  implementation_status.rst  index.rst  installation.rst  metadata_history.rst  spectral.rst  validation.rst  vertical.rst
src/fullpos/: __init__.py  _build_config.py.in  _ectrans.c  _fpint_wrappers.F90  _vertical_native.c  _vertical_native_wrappers.F90  _vertical_support.F90  api.py  config.py  diagnostics.py  errors.py  fcttre.func.h  fcttrm.func.h  filtering.py  fpview.intfb.h  gpgeo.intfb.h  gphpre.intfb.h  gprcp.intfb.h  gprh.intfb.h  grib.py  grids.py  masks.py  metadata.py  native.py  pp2dint.intfb.h  ppflev.intfb.h  ppgeop.intfb.h  ppinit.intfb.h  pppmer.intfb.h  ppq.intfb.h  ppt.intfb.h  ppuv.intfb.h  reduced.py  regridder.py  spectral.py  surface.py  verdisint.intfb.h  vertical.py  xarray.py
src/fullpos/_vertical/: __init__.py  api.py  common.py  diagnostics.py  eta.py  height.py  model_level.py  pos.py  potential_temperature.py  potential_vorticity.py  pressure.py  temperature.py  validation.py
src/fullpos/filters/: __init__.py  core.py  io.py  profiles.py  spectral.py
src/fullpos/interpolation/: __init__.py  api.py  horizontal.py  kernels.py  native.py  regridder.py  surface.py  xarray.py
tests/: conftest.py  test_api.py  test_diagnostics.py  test_filter_profiles.py  test_filtering.py  test_grib.py  test_grids.py  test_horizontal.py  test_native.py  test_native_fpint_kernels.py  test_native_synthesis_cache.py  test_realdata.py  test_regression_tool.py  test_vertical.py  test_xarray.py
tools/: benchmark_chunks.py  benchmark_mass_adjustment_hotspots.py  benchmark_q_monotonic_regrid.py  build_native_prefix.py  check_regression.py  check_vertical_inputs.py  compare_native_pressure_reference.py  compare_pressure_reference.py  compare_pressure_to_skyborn.py  doctor.py  export_panoply_samples.py  inspect_grib.py  regrid_grib_dataset.py  regrid_grib_sample.py  roundtrip_error.py  skyborn_pressure_reference.py
