[build-system]
requires = [
    "meson-python>=0.16",
    "meson>=1.3",
    "ninja",
    "numpy>=1.24",
]
build-backend = "mesonpy"

[project]
name = "fullpos"
version = "0.1.0a0"
description = "ECMWF/OpenIFS FULLPOS-style regridding tools for Python"
readme = "README.md"
authors = [{ name = "Qianye Su" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "xarray",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
]

[project.optional-dependencies]
io = [
    "netCDF4",
    "h5netcdf",
]
grib = [
    "cfgrib",
    "eccodes",
]
dev = [
    "pytest",
    "pytest-cov",
    "build",
]
docs = [
    "sphinx>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
